--- a/DDG Stuff.ipynb
+++ b/DDG Stuff.ipynb
@@ -21,22 +21,723 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 421,
+   "execution_count": 453,
    "metadata": {
     "collapsed": false,
     "scrolled": true
    },
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'tuple' object has no attribute 'ResidueID'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-421-104cfbfd0984>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     72\u001b[0m \u001b[0mneighbors\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mneighbors_list\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     73\u001b[0m \u001b[0mmutations\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mresfile_stuff\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 74\u001b[0;31m \u001b[0mbash\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mjson\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mneighbors\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmutations\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-421-104cfbfd0984>\u001b[0m in \u001b[0;36mbash\u001b[0;34m(json, neighbors, mutations)\u001b[0m\n\u001b[1;32m     64\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     65\u001b[0m         \u001b[0;31m#pivot_residues, target, new_res\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 66\u001b[0;31m         \u001b[0mtarget\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mi\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mResidueID\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     67\u001b[0m         \u001b[0mnew_res\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mi\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mMutantAA\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     68\u001b[0m         \u001b[0mpivot_residues\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmath\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'tuple' object has no attribute 'ResidueID'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n"
      ]
     }
    ],
@@ -55,23 +756,29 @@
     "    asdf = open(\"/Users/jameslucas/Kortemme_Rotation/blank_job_dict.json\")\n",
     "    jsonfile = json.load(asdf)\n",
     "\n",
-    "    chain = pd.DataFrame()\n",
+    "    chaintomove = pd.DataFrame()\n",
     "    directory = pd.DataFrame()\n",
-    "\n",
-    "    for i in jsonfile:\n",
-    "        chain = chain.append([jsonfile[i][\"%%chainstomove%%\"]])\n",
-    "        directory = directory.append([jsonfile[i][\"input_file_list\"]])\n",
-    "\n",
-    "    chain.columns = ['Chain']\n",
-    "    directory.columns = ['PDB File Path']\n",
+    "    index = pd.DataFrame()\n",
+    "    count = 0\n",
     "    \n",
-    "    result = pd.concat([chain, directory], axis=1, join_axes=[chain.index])\n",
-    "    output = result.set_index('PDB File Path')\n",
-    "\n",
+    "    for i in jsonfile:\n",
+    "        chaintomove = chaintomove.append([jsonfile[i][\"%%chainstomove%%\"]])\n",
+    "        directory = directory.append([jsonfile[i][\"input_file_list\"]])\n",
+    "        index = index.append([count])\n",
+    "        count = count + 1\n",
+    "        \n",
+    "    chaintomove.columns = ['Chaintomove']\n",
+    "    directory.columns = ['PDB File Path']\n",
+    "    index.columns = ['Index']\n",
+    "    \n",
+    "    result = pd.concat([chaintomove, directory], axis=1, join_axes=[chaintomove.index])\n",
+    "    result = pd.concat([index, result], axis=1)\n",
+    "    output = result.set_index('Index')\n",
     "    return output\n",
     "\n",
     "#Finds neighbors within 8A and adds position and Chain information to a pandas dataframe\n",
     "def neighbors_list():\n",
+    "####Need to alter so that neighbors takes in folder directory and PDB variables from json_parser()    \n",
     "    neighbors = find_neighbors(\"/Users/jameslucas/Kortemme_Rotation/56287/\", \"/Users/jameslucas/Kortemme_Rotation/56287/1TM1_EI.pdb\", 8)\n",
     "    info = pd.DataFrame(columns=('Residue', 'Chain'))\n",
     "    hold = pd.DataFrame(columns=('Residue', 'Chain'))\n",
@@ -87,11 +794,13 @@
     "            \n",
     "    info = info.set_index('Chain')\n",
     "    info = info.sort('Residue',ascending=True)\n",
+    "    ####ADD#### turn all data in info dataframe into comma delimited <resnum><chain> pairs\n",
     "    w8_list = info\n",
     "    return w8_list\n",
     "\n",
     "#Reads resfile and returns mutation position+chain and type\n",
     "def resfile_stuff():\n",
+    "####Need to alter so that resfile takes in folder directory and PDB variables from json_parser()\n",
     "    resfile = read_mutations_resfile(\"/Users/jameslucas/Kortemme_Rotation/56287/\")\n",
     "    for i in resfile:\n",
     "        position = i[0]\n",
@@ -103,37 +812,35 @@
     "def bash(json, neighbors, mutations):\n",
     "    for pwd, chn in json.iterrows():\n",
     "        pdb_dir = pwd\n",
-    "        chain = chn\n",
+    "        chaintomove = chn['Chaintomove']\n",
+    "        position, chain, mut_to = resfile_stuff() \n",
+    "        print position\n",
+    "        ####NEED TO FIX... remove XXX.pdb, just need folder directory\n",
+    "        #Might actually want to declare path string varibles outside of function, both neighbors_list() and resfile_stuff() need inputs\n",
     "        \n",
-    "        #pivot_residues, target, new_res\n",
-    "        #target = \n",
-    "        #new_res = \n",
-    "        #pivot_residues = \n",
+    "####All the variables and stuff for printing out the bash script\n",
+    "#        pivot_residues, target, new_res\n",
+    "#        target = \n",
+    "#        new_res = \n",
+    "#        pivot_residues = \n",
     "#        print \"~/rosetta_src_2016.08.58479_bundle/main/source/bin/rosetta_scripts.linuxgccrelease \\\n",
     "#-s ~/%s ~/DDG_Test.xml -ignore_unrecognized_res -out:path:pdb ~/%s -nstruct 100 -parser:script_vars \\\n",
     "#target=%s new_res=%s pivot_residues=%s\" %(pdb, pdb, target, new_res, pivot_resdiues)\n",
-    "\n",
+    "        \n",
     "json = json_parser()\n",
     "neighbors = neighbors_list()\n",
     "mutations = resfile_stuff()\n",
+    "\n",
     "bash(json, neighbors, mutations)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 415,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['61', 'I', 'PIKAA', 'A']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Submit script!!!\n",
     "import json\n",
