Updated submit script, fixed inputs for all functions to take filepaths from .json

--- a/DDG Stuff.ipynb
+++ b/DDG Stuff.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 453,
+   "execution_count": 29,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -32,712 +32,21 @@
      "output_type": "stream",
      "text": [
       "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n"
+      "I\n",
+      "A\n",
+      "      Residue\n",
+      "Chain        \n",
+      "E         155\n",
+      "E         187\n",
+      "E         189\n",
+      "E         218\n",
+      "E         220\n",
+      "E         221\n",
+      "I          59\n",
+      "I          60\n",
+      "I          61\n",
+      "I          62\n",
+      "I          63\n"
      ]
     }
    ],
@@ -751,9 +60,8 @@
     "\n",
     "#Parses dataset .json file and outputs chain to move and input PDB file directory\n",
     "def json_parser():\n",
-    "#    For use on the cluster\n",
-    "#    asdf = open(\"~/ddg-zemu-runs/160315-kyleb_james-backrub-rscript/data/blank_job_dict.json\")\n",
-    "    asdf = open(\"/Users/jameslucas/Kortemme_Rotation/blank_job_dict.json\")\n",
+    "####asdf = open(\"~/ddg-zemu-runs/160315-kyleb_james-backrub-rscript/data/blank_job_dict.json\")\n",
+    "    asdf = open(\"/Users/jameslucas/Kortemme_Rotation/blank_job_dict_copy.json\")\n",
     "    jsonfile = json.load(asdf)\n",
     "\n",
     "    chaintomove = pd.DataFrame()\n",
@@ -777,9 +85,8 @@
     "    return output\n",
     "\n",
     "#Finds neighbors within 8A and adds position and Chain information to a pandas dataframe\n",
-    "def neighbors_list():\n",
-    "####Need to alter so that neighbors takes in folder directory and PDB variables from json_parser()    \n",
-    "    neighbors = find_neighbors(\"/Users/jameslucas/Kortemme_Rotation/56287/\", \"/Users/jameslucas/Kortemme_Rotation/56287/1TM1_EI.pdb\", 8)\n",
+    "def neighbors_list(pdb_filepath, pdb_file):\n",
+    "    neighbors = find_neighbors(\"/Users/jameslucas/Kortemme_Rotation/\"+pdb_filepath, \"/Users/jameslucas/Kortemme_Rotation/\"+pdb_file, 8)\n",
     "    info = pd.DataFrame(columns=('Residue', 'Chain'))\n",
     "    hold = pd.DataFrame(columns=('Residue', 'Chain'))\n",
     "\n",
@@ -794,14 +101,14 @@
     "            \n",
     "    info = info.set_index('Chain')\n",
     "    info = info.sort('Residue',ascending=True)\n",
-    "    ####ADD#### turn all data in info dataframe into comma delimited <resnum><chain> pairs\n",
+    "    ####ADD... turn all data in info dataframe into comma delimited <resnum><chain> pairs\n",
     "    w8_list = info\n",
     "    return w8_list\n",
     "\n",
     "#Reads resfile and returns mutation position+chain and type\n",
-    "def resfile_stuff():\n",
+    "def resfile_stuff(pdb_filepath):\n",
     "####Need to alter so that resfile takes in folder directory and PDB variables from json_parser()\n",
-    "    resfile = read_mutations_resfile(\"/Users/jameslucas/Kortemme_Rotation/56287/\")\n",
+    "    resfile = read_mutations_resfile(\"/Users/jameslucas/Kortemme_Rotation/\"+pdb_filepath)\n",
     "    for i in resfile:\n",
     "        position = i[0]\n",
     "        chain = i[1]\n",
@@ -809,14 +116,24 @@
     "    return position, chain, mut_to\n",
     "    \n",
     "#Prints CMD input with PDBID, associated mutation, and pivot residues\n",
-    "def bash(json, neighbors, mutations):\n",
-    "    for pwd, chn in json.iterrows():\n",
-    "        pdb_dir = pwd\n",
-    "        chaintomove = chn['Chaintomove']\n",
-    "        position, chain, mut_to = resfile_stuff() \n",
-    "        print position\n",
-    "        ####NEED TO FIX... remove XXX.pdb, just need folder directory\n",
-    "        #Might actually want to declare path string varibles outside of function, both neighbors_list() and resfile_stuff() need inputs\n",
+    "def bash(json):\n",
+    "    for indx, chain_path in json.iterrows():\n",
+    "        pdb_file = chain_path['PDB File Path']\n",
+    "        chaintomove = chain_path['Chaintomove']\n",
+    "        \n",
+    "        #Removes PDB file from path, saves in variable data_dir\n",
+    "        pdb_file_parse = re.sub(\"/\",' ', str(pdb_file))\n",
+    "        data, filenum, pdbname = pdb_file_parse.split()\n",
+    "        data_dir = data + \"/\" + filenum\n",
+    "        \n",
+    "        #Assigns function output to variables for bash input\n",
+    "        target, chain, new_res = resfile_stuff(data_dir)\n",
+    "        pivot_residues = neighbors_list(data_dir, pdb_file)\n",
+    "        \n",
+    "        print target\n",
+    "        print chain\n",
+    "        print new_res\n",
+    "        print pivot_residues\n",
     "        \n",
     "####All the variables and stuff for printing out the bash script\n",
     "#        pivot_residues, target, new_res\n",
@@ -828,10 +145,7 @@
     "#target=%s new_res=%s pivot_residues=%s\" %(pdb, pdb, target, new_res, pivot_resdiues)\n",
     "        \n",
     "json = json_parser()\n",
-    "neighbors = neighbors_list()\n",
-    "mutations = resfile_stuff()\n",
-    "\n",
-    "bash(json, neighbors, mutations)\n"
+    "bash(json)"
    ]
   },
   {
@@ -841,22 +155,7 @@
     "collapsed": false
    },
    "outputs": [],
-   "source": [
-    "#Submit script!!!\n",
-    "import json\n",
-    "import re\n",
-    "import pandas as pd\n",
-    "from finalize_JL import find_neighbors\n",
-    "from finalize_JL import read_mutations_resfile\n",
-    "\n",
-    "#Reads resfile and returns mutation position and type\n",
-    "def resfile_stuff():\n",
-    "    resfile = read_mutations_resfile(\"/Users/jameslucas/Kortemme_Rotation/56287/\")\n",
-    "    position = resfile[0]\n",
-    "    print position\n",
-    "    \n",
-    "resfile_stuff()"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
