Finished! Will iterate over files in .json and spit out bash input. I really need to study now...

--- a/DDG Stuff.ipynb
+++ b/DDG Stuff.ipynb
@@ -21,10 +21,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 54,
    "metadata": {
     "collapsed": false,
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -34,19 +34,8 @@
       "61\n",
       "I\n",
       "A\n",
-      "      Residue\n",
-      "Chain        \n",
-      "E         155\n",
-      "E         187\n",
-      "E         189\n",
-      "E         218\n",
-      "E         220\n",
-      "E         221\n",
-      "I          59\n",
-      "I          60\n",
-      "I          61\n",
-      "I          62\n",
-      "I          63\n"
+      "155E,187E,189E,218E,220E,221E,59I,60I,61I,62I,63I\n",
+      "~/rosetta_src_2016.08.58479_bundle/main/source/bin/rosetta_scripts.linuxgccrelease -s ~/1TM1_EI.pdb ~/DDG_Test.xml -ignore_unrecognized_res -out:path:pdb ~/1TM1_EI.pdb -nstruct 100 -parser:script_vars target=61 new_res=A pivot_residues=155E,187E,189E,218E,220E,221E,59I,60I,61I,62I,63I\n"
      ]
     }
    ],
@@ -101,13 +90,15 @@
     "            \n",
     "    info = info.set_index('Chain')\n",
     "    info = info.sort('Residue',ascending=True)\n",
+    "    pivotlist = ''\n",
+    "    for indx, info in info.iterrows():\n",
+    "        pivotlist = pivotlist + ',' + info['Residue'] + indx\n",
     "    ####ADD... turn all data in info dataframe into comma delimited <resnum><chain> pairs\n",
-    "    w8_list = info\n",
-    "    return w8_list\n",
+    "    pivotlist = pivotlist[1:]\n",
+    "    return pivotlist\n",
     "\n",
     "#Reads resfile and returns mutation position+chain and type\n",
     "def resfile_stuff(pdb_filepath):\n",
-    "####Need to alter so that resfile takes in folder directory and PDB variables from json_parser()\n",
     "    resfile = read_mutations_resfile(\"/Users/jameslucas/Kortemme_Rotation/\"+pdb_filepath)\n",
     "    for i in resfile:\n",
     "        position = i[0]\n",
@@ -126,23 +117,14 @@
     "        data, filenum, pdbname = pdb_file_parse.split()\n",
     "        data_dir = data + \"/\" + filenum\n",
     "        \n",
-    "        #Assigns function output to variables for bash input\n",
+    "        #Assigns function output to variables for bash input (pivot_residues, target, new_res)\n",
     "        target, chain, new_res = resfile_stuff(data_dir)\n",
     "        pivot_residues = neighbors_list(data_dir, pdb_file)\n",
     "        \n",
-    "        print target\n",
-    "        print chain\n",
-    "        print new_res\n",
-    "        print pivot_residues\n",
-    "        \n",
     "####All the variables and stuff for printing out the bash script\n",
-    "#        pivot_residues, target, new_res\n",
-    "#        target = \n",
-    "#        new_res = \n",
-    "#        pivot_residues = \n",
-    "#        print \"~/rosetta_src_2016.08.58479_bundle/main/source/bin/rosetta_scripts.linuxgccrelease \\\n",
-    "#-s ~/%s ~/DDG_Test.xml -ignore_unrecognized_res -out:path:pdb ~/%s -nstruct 100 -parser:script_vars \\\n",
-    "#target=%s new_res=%s pivot_residues=%s\" %(pdb, pdb, target, new_res, pivot_resdiues)\n",
+    "        print \"~/rosetta_src_2016.08.58479_bundle/main/source/bin/rosetta_scripts.linuxgccrelease \\\n",
+    "-s ~/%s ~/DDG_Test.xml -ignore_unrecognized_res -out:path:pdb ~/%s -nstruct 100 -parser:script_vars \\\n",
+    "target=%s new_res=%s pivot_residues=%s\" %(pdbname, pdbname, target, new_res, pivot_residues)\n",
     "        \n",
     "json = json_parser()\n",
     "bash(json)"
