Small tweak to submit script

--- a/DDG Stuff.ipynb
+++ b/DDG Stuff.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 77,
    "metadata": {
     "collapsed": false,
     "scrolled": false
@@ -31,7 +31,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "~/rosetta_src_2016.08.58479_bundle/main/source/bin/rosetta_scripts.linuxgccrelease -s ~/1TM1_EI.pdb ~/DDG_Test.xml -ignore_unrecognized_res -out:path:pdb ~/1TM1_EI.pdb -nstruct 100 -parser:script_vars target=61 new_res=A pivot_residues=155E,187E,189E,218E,220E,221E,59I,60I,61I,62I,63I\n"
+      "1TM1_EI\n",
+      "~/rosetta_src_2016.08.58479_bundle/main/source/bin/rosetta_scripts.linuxgccrelease -s ~/data/56287/1TM1_EI.pdb ~/DDG_Test.xml -ignore_unrecognized_res -out:path:pdb ~/output/1TM1_EI_001.pdb -nstruct 100 -parser:script_vars target=61 new_res=A pivot_residues=155E,187E,189E,218E,220E,221E,59I,60I,61I,62I,63I\n"
      ]
     }
    ],
@@ -110,8 +111,9 @@
     "        \n",
     "        #Removes PDB file from path, saves in variable data_dir\n",
     "        pdb_file_parse = re.sub(\"/\",' ', str(pdb_file))\n",
-    "        data, filenum, pdbname = pdb_file_parse.split()\n",
+    "        data, filenum, pdbtemp = pdb_file_parse.split()\n",
     "        data_dir = data + \"/\" + filenum\n",
+    "        PDBID = pdbtemp[:-4]\n",
     "        \n",
     "        #Assigns function output to variables for bash input (pivot_residues, target, new_res)\n",
     "        target, chain, new_res = resfile_stuff(data_dir)\n",
@@ -119,8 +121,8 @@
     "        \n",
     "####All the variables and stuff for printing out the bash script\n",
     "        print \"~/rosetta_src_2016.08.58479_bundle/main/source/bin/rosetta_scripts.linuxgccrelease \\\n",
-    "-s ~/%s ~/DDG_Test.xml -ignore_unrecognized_res -out:path:pdb ~/%s -nstruct 100 -parser:script_vars \\\n",
-    "target=%s new_res=%s pivot_residues=%s\" %(pdbname, pdbname, target, new_res, pivot_residues)\n",
+    "-s ~/%s ~/DDG_Test.xml -ignore_unrecognized_res -out:path:pdb ~/output/%s_001.pdb -nstruct 100 -parser:script_vars \\\n",
+    "target=%s new_res=%s pivot_residues=%s\" %(pdb_file, PDBID, target, new_res, pivot_residues)\n",
     "        \n",
     "json = json_parser()\n",
     "bash(json)"
