Totally gutted sumbit script to be compatible with Task IDs and cluster stuff :(

--- a/DDG Stuff.ipynb
+++ b/DDG Stuff.ipynb
@@ -21,18 +21,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 118,
    "metadata": {
     "collapsed": false,
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1TM1_EI\n",
-      "~/rosetta_src_2016.08.58479_bundle/main/source/bin/rosetta_scripts.linuxgccrelease -s ~/data/56287/1TM1_EI.pdb ~/DDG_Test.xml -ignore_unrecognized_res -out:path:pdb ~/output/1TM1_EI_001.pdb -nstruct 100 -parser:script_vars target=61 new_res=A pivot_residues=155E,187E,189E,218E,220E,221E,59I,60I,61I,62I,63I\n"
+      "{u'56287': {u'%%chainstomove%%': u'I', u'input_file_list': [u'data/56287/1TM1_EI.pdb']}}\n",
+      "\n",
+      "Local Testing - Minimization\n",
+      "~/rosetta_src_2016.02.58402_bundle/main/source/bin/rosetta_scripts.macosclangrelease -s /Users/jameslucas/Kortemme_Rotation/data/56287/1TM1_EI.pdb -parser:protocol /Users/jameslucas/Kortemme_Rotation/RosettaScripts/DDG_BackrubProtocol_Minimize.xml -ignore_unrecognized_res -out:path:pdb /Users/jameslucas/Kortemme_Rotation/minimized/ -parser:script_vars target=61 new_res=ALA pivot_residues=155E,187E,189E,218E,220E,221E,59I,60I,61I,62I,63I -no_nstruct_label\n",
+      "\n",
+      "Local Testing - Backrub Ensembles\n",
+      "~/rosetta_src_2016.02.58402_bundle/main/source/bin/rosetta_scripts.macosclangrelease -s /Users/jameslucas/Kortemme_Rotation/minimized/1TM1_EI_0001.pdb -parser:protocol /Users/jameslucas/Kortemme_Rotation/RosettaScripts/DDG_BackrubProtocol_Backrub.xml -ignore_unrecognized_res -out:path:pdb /Users/jameslucas/Kortemme_Rotation/Backrub_Ensembles/1TM1_EI -nstruct 100 -parser:script_vars target=61 new_res=ALA pivot_residues=155E,187E,189E,218E,220E,221E,59I,60I,61I,62I,63I\n",
+      "\n",
+      "Local Testing - Mutate and Score\n",
+      "~/rosetta_src_2016.02.58402_bundle/main/source/bin/rosetta_scripts.macosclangrelease -s /Users/jameslucas/Kortemme_Rotation/minimized/1TM1_EI_0001.pdb -parser:protocol /Users/jameslucas/Kortemme_Rotation/RosettaScripts/DDG_BackrubProtocol_MutateRepack.xml -ignore_unrecognized_res -out:path:pdb /Users/jameslucas/Kortemme_Rotation/Backrub_Ensembles/1TM1_EI -nstruct 100 -parser:script_vars target=61 new_res=ALA pivot_residues=155E,187E,189E,218E,220E,221E,59I,60I,61I,62I,63I\n",
+      "\n",
+      "Local Testing - Score\n",
+      "~/rosetta_src_2016.02.58402_bundle/main/source/bin/rosetta_scripts.macosclangrelease -s /Users/jameslucas/Kortemme_Rotation/minimized/1TM1_EI_0001.pdb -parser:protocol /Users/jameslucas/Kortemme_Rotation/RosettaScripts/DDG_BackrubProtocol_MutateRepack.xml -ignore_unrecognized_res -out:path:pdb /Users/jameslucas/Kortemme_Rotation/Backrub_Ensembles/1TM1_EI -nstruct 100 -parser:script_vars target=61 new_res=ALA pivot_residues=155E,187E,189E,218E,220E,221E,59I,60I,61I,62I,63I\n"
      ]
     }
    ],
@@ -46,29 +57,17 @@
     "\n",
     "#Parses dataset .json file and outputs chain to move and input PDB file directory\n",
     "def json_parser():\n",
+    "    \n",
     "####asdf = open(\"~/ddg-zemu-runs/160315-kyleb_james-backrub-rscript/data/blank_job_dict.json\")\n",
     "    asdf = open(\"/Users/jameslucas/Kortemme_Rotation/blank_job_dict_copy.json\")\n",
     "    jsonfile = json.load(asdf)\n",
+    "    \n",
+    "    print jsonfile\n",
+    "    key = sorted(jsonfile.keys())[0]\n",
+    "    chaintomove = jsonfile[key][\"%%chainstomove%%\"]\n",
+    "    directory = jsonfile[key]['input_file_list'][0]\n",
     "\n",
-    "    chaintomove = pd.DataFrame()\n",
-    "    directory = pd.DataFrame()\n",
-    "    index = pd.DataFrame()\n",
-    "    count = 0\n",
-    "    \n",
-    "    for i in jsonfile:\n",
-    "        chaintomove = chaintomove.append([jsonfile[i][\"%%chainstomove%%\"]])\n",
-    "        directory = directory.append([jsonfile[i][\"input_file_list\"]])\n",
-    "        index = index.append([count])\n",
-    "        count = count + 1\n",
-    "        \n",
-    "    chaintomove.columns = ['Chaintomove']\n",
-    "    directory.columns = ['PDB File Path']\n",
-    "    index.columns = ['Index']\n",
-    "    \n",
-    "    result = pd.concat([chaintomove, directory], axis=1, join_axes=[chaintomove.index])\n",
-    "    result = pd.concat([index, result], axis=1)\n",
-    "    output = result.set_index('Index')\n",
-    "    return output\n",
+    "    return chaintomove, directory\n",
     "\n",
     "#Finds neighbors within 8A and adds position and Chain information to a pandas dataframe\n",
     "def neighbors_list(pdb_filepath, pdb_file):\n",
@@ -104,92 +103,87 @@
     "    return position, chain, mut_to\n",
     "    \n",
     "#Prints CMD input with PDBID, associated mutation, and pivot residues\n",
-    "def bash(json):\n",
-    "    for indx, chain_path in json.iterrows():\n",
-    "        pdb_file = chain_path['PDB File Path']\n",
-    "        chaintomove = chain_path['Chaintomove']\n",
+    "def bash(chaintomove, pdb_file):\n",
+    "\n",
+    "    #Removes PDB file from path, saves in variable data_dir\n",
+    "    pdb_file_parse = re.sub(\"/\",' ', str(pdb_file))\n",
+    "    data, filenum, pdbtemp = pdb_file_parse.split()\n",
+    "    data_dir = data + \"/\" + filenum\n",
+    "    PDBID = pdbtemp[:-4]\n",
     "        \n",
-    "        #Removes PDB file from path, saves in variable data_dir\n",
-    "        pdb_file_parse = re.sub(\"/\",' ', str(pdb_file))\n",
-    "        data, filenum, pdbtemp = pdb_file_parse.split()\n",
-    "        data_dir = data + \"/\" + filenum\n",
-    "        PDBID = pdbtemp[:-4]\n",
+    "    #Dictionary: 1- to 3-letter code\n",
+    "    res_dict = {\n",
+    "        'A':'ALA',\n",
+    "        'C':'CYS',\n",
+    "        'D':'ASP',\n",
+    "        'E':'GLU',\n",
+    "        'F':'PHE',\n",
+    "        'G':'GLY',\n",
+    "        'H':'HIS',\n",
+    "        'I':'ILE',\n",
+    "        'K':'LYS',\n",
+    "        'L':'LEU',\n",
+    "        'M':'MET',\n",
+    "        'N':'ASN',\n",
+    "        'P':'PRO',\n",
+    "        'Q':'GLN',\n",
+    "        'R':'ARG',\n",
+    "        'S':'SER',\n",
+    "        'T':'THR',\n",
+    "        'V':'VAL',\n",
+    "        'W':'TRP',\n",
+    "        'Y':'TYR'\n",
+    "    }\n",
     "        \n",
-    "        #Assigns function output to variables for bash input (pivot_residues, target, new_res)\n",
-    "        target, chain, new_res = resfile_stuff(data_dir)\n",
-    "        pivot_residues = neighbors_list(data_dir, pdb_file)\n",
+    "    #Assigns function output to variables for bash input (pivot_residues, target, new_res)\n",
+    "    target, chain, new_res_one = resfile_stuff(data_dir)\n",
+    "    new_res_three = res_dict[new_res_one]\n",
+    "    pivot_residues = neighbors_list(data_dir, pdb_file)\n",
     "        \n",
     "####All the variables and stuff for printing out the bash script\n",
-    "        print \"~/rosetta_src_2016.08.58479_bundle/main/source/bin/rosetta_scripts.linuxgccrelease \\\n",
-    "-s ~/%s ~/DDG_Test.xml -ignore_unrecognized_res -out:path:pdb ~/output/%s_001.pdb -nstruct 100 -parser:script_vars \\\n",
-    "target=%s new_res=%s pivot_residues=%s\" %(pdb_file, PDBID, target, new_res, pivot_residues)\n",
-    "        \n",
-    "json = json_parser()\n",
-    "bash(json)"
+    "#Cluster Use\n",
+    "#        print \"~/rosetta_src_2016.08.58479_bundle/main/source/bin/rosetta_scripts.linuxgccrelease \\\n",
+    "#-s ~/%s ~/DDG_Test.xml -ignore_unrecognized_res -out:path:pdb ~/output/%s_001.pdb -nstruct 100 -parser:script_vars \\\n",
+    "#target=%s new_res=%s pivot_residues=%s\" %(pdb_file, PDBID, target, new_res_three, pivot_residues)\n",
+    "\n",
+    "#    print \"rosetta_src_2016.08.58479_bundle/main/source/bin/rosetta_scripts.linuxgccrelease \\\n",
+    "#-s /Users/jameslucas/Kortemme_Rotation/%s -parser:protocol /Users/jameslucas/Kortemme_Rotation/DDG_Test.xml  \\\n",
+    "#-ignore_unrecognized_res -out:path:pdb /Users/jameslucas/Kortemme_Rotation/minimized/ -nstruct 100 \\\n",
+    "#-parser:script_vars target=%s new_res=%s pivot_residues=%s\" %(pdb_file, target, new_res_three, pivot_residues)\n",
+    "    \n",
+    "#Local Testing - All things\n",
+    "    print '\\nLocal Testing - Minimization'\n",
+    "    print \"~/rosetta_src_2016.02.58402_bundle/main/source/bin/rosetta_scripts.macosclangrelease \\\n",
+    "-s /Users/jameslucas/Kortemme_Rotation/%s/%s.pdb -parser:protocol /Users/jameslucas/Kortemme_Rotation\\\n",
+    "/RosettaScripts/DDG_BackrubProtocol_Minimize.xml -ignore_unrecognized_res -out:path:pdb \\\n",
+    "/Users/jameslucas/Kortemme_Rotation/minimized/ -parser:script_vars target=%s new_res=%s pivot_residues=%s \\\n",
+    "-no_nstruct_label\" %(data_dir, PDBID, target, new_res_three, pivot_residues)\n",
+    "\n",
+    "    print '\\nLocal Testing - Backrub Ensembles'\n",
+    "    print \"~/rosetta_src_2016.02.58402_bundle/main/source/bin/rosetta_scripts.macosclangrelease \\\n",
+    "-s /Users/jameslucas/Kortemme_Rotation/minimized/%s_0001.pdb -parser:protocol /Users/jameslucas/Kortemme_Rotation\\\n",
+    "/RosettaScripts/DDG_BackrubProtocol_Backrub.xml -ignore_unrecognized_res -out:path:pdb \\\n",
+    "/Users/jameslucas/Kortemme_Rotation/Backrub_Ensembles/%s -nstruct 100 -parser:script_vars target=%s \\\n",
+    "new_res=%s pivot_residues=%s\" %(PDBID, PDBID, target, new_res_three, pivot_residues)\n",
+    "    \n",
+    "    print '\\nLocal Testing - Mutate and Score'\n",
+    "    print \"~/rosetta_src_2016.02.58402_bundle/main/source/bin/rosetta_scripts.macosclangrelease \\\n",
+    "-s /Users/jameslucas/Kortemme_Rotation/minimized/%s_0001.pdb -parser:protocol /Users/jameslucas/Kortemme_Rotation\\\n",
+    "/RosettaScripts/DDG_BackrubProtocol_MutateRepack.xml -ignore_unrecognized_res -out:path:pdb \\\n",
+    "/Users/jameslucas/Kortemme_Rotation/Backrub_Ensembles/%s -nstruct 100 -parser:script_vars target=%s \\\n",
+    "new_res=%s pivot_residues=%s\" %(PDBID, PDBID, target, new_res_three, pivot_residues)\n",
+    "    \n",
+    "    print '\\nLocal Testing - Score'\n",
+    "    print \"~/rosetta_src_2016.02.58402_bundle/main/source/bin/rosetta_scripts.macosclangrelease \\\n",
+    "-s /Users/jameslucas/Kortemme_Rotation/minimized/%s_0001.pdb -parser:protocol /Users/jameslucas/Kortemme_Rotation\\\n",
+    "/RosettaScripts/DDG_BackrubProtocol_MutateRepack.xml -ignore_unrecognized_res -out:path:pdb \\\n",
+    "/Users/jameslucas/Kortemme_Rotation/Backrub_Ensembles/%s -nstruct 100 -parser:script_vars target=%s \\\n",
+    "new_res=%s pivot_residues=%s\" %(PDBID, PDBID, target, new_res_three, pivot_residues)\n",
+    "\n",
+    "chaintomove, pdb_file = json_parser()\n",
+    "\n",
+    "bash(chaintomove, pdb_file)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
