Added alot of documentation and organization

--- a/DDG Stuff.ipynb
+++ b/DDG Stuff.ipynb
@@ -1,6 +1,31 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#DDG Stuff\n",
+    "This is the iPython Notebook containing a lot of my code for working with the Zemu DDG dataset. Each entry has its own little description below.\n",
+    "##Contents:\n",
+    "* RunScript<br>\n",
+    "* RosettaOut_Parser<br>\n",
+    "* List_PDBs<br>\n",
+    "* PDB_REDO .pdb Scraper<br>\n",
+    "* JSON File Editor<br>\n",
+    "* PDB_REDO Data Setup<br>\n",
+    "* Resfile_Editor<br>\n",
+    "* Strip PDB_REDO .pdb's<br>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##RunScript\n",
+    "This is a modified version of SubmitRun_DDG_Zemu_General.py for troubleshooting RosettaScripts (specifically DDG_Text.xml). "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -459,7 +484,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#"
+    "##Strip PDBs\n",
+    "This script reads PDB IDs from a .csv (generated from List_PDBs.py, manually sorted for PDB_REDO only structures) and opens the original pdb file (pdb_original). It looks at the name to see which chains are needed and only writes those chains to a new PDB file (pdb_stripped)."
    ]
   },
   {
